#10422 [SCSS 개선] template 하위에 mixins 디렉토리 생성(1)
- mixin 디렉토리 내에서 기존 mixins.scss를 큰 단위의 기능 별로 분리
- layout 관련하여 일부 mixin 이름 변경 리팩터링
- 불필요한 여백, 주석 제거
- 디렉토리 변경에 따른 경로 수정

--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -256,10 +256,10 @@
           width: 100%;
           .datepicker,
           .datetimepicker {
-            @include background($icon-folder-path + 'icon_calendar.svg', auto, no-repeat, 98%, 50%, null);
+            @include backgroundImage($icon-folder-path + 'icon_calendar.svg', auto, no-repeat, 98%, 50%, null);
           }
           .timepicker {
-            @include background($icon-folder-path + 'icon_clock.svg', auto, no-repeat, 98%, 50%, null);
+            @include backgroundImage($icon-folder-path + 'icon_clock.svg', auto, no-repeat, 98%, 50%, null);
           }
         }
         // 단위
