--- a/src/main/resources/public/src/scss/portal/_buttons.scss
+++ b/src/main/resources/public/src/scss/portal/_buttons.scss
@@ -24,7 +24,7 @@
   border-color: $line-gray;
   
   &.icon-google {
-    @include background ($icon-folder-path + 'login/icon_login_google.svg', 1.188rem, no-repeat, 0.625rem, center, null); // 19px 10px
+    @include backgroundImage($icon-folder-path + 'login/icon_login_google.svg', 1.188rem, no-repeat, 0.625rem, center, null); // 19px 10px
   }
   $background-colors: (
           hover: $btn-google-hover-bg-color,
@@ -55,7 +55,7 @@
   border-color: #EBCC00;
 
   &.icon-kakao {
-    @include background ($icon-folder-path + 'login/icon_login_kakao.svg', 1.188rem, no-repeat, 0.625rem, center, null); // 19px 10px
+    @include backgroundImage($icon-folder-path + 'login/icon_login_kakao.svg', 1.188rem, no-repeat, 0.625rem, center, null); // 19px 10px
   }
   $background-colors: (
           hover: $btn-kakao-hover-bg-color,
