--- a/src/main/resources/public/src/scss/template/_avatar.scss
+++ b/src/main/resources/public/src/scss/template/_avatar.scss
@@ -122,7 +122,7 @@
             position: absolute;
             top: 0;
             right: 0;
-            @include background ($icon-folder-path + 'icon_close.svg', 0.875rem, no-repeat, center, center, null); // 14px
+            @include backgroundImage($icon-folder-path + 'icon_close.svg', 0.875rem, no-repeat, center, center, null); // 14px
             cursor: pointer;
 
             &:hover {
