--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -1,335 +1,6 @@
-// 공통으로 사용하고자 하는 디자인 묶음을 mixin으로 정의합니다.
-@mixin keyframe($animation_name) {
-  @-webkit-keyframes #{$animation_name} {
-    @content;
-  }
-
-  @-moz-keyframes #{$animation_name} {
-    @content;
-  }
-
-  @-o-keyframes #{$animation_name} {
-    @content;
-  }
-
-  @keyframes #{$animation_name} {
-    @content;
-  }
-}
-// 애니메이션
-@mixin animation($delay, $duration, $name, $timing, $count:1) {
-  animation-delay: $delay;
-  animation-duration: $duration;
-  animation-name: $name;
-  animation-timing-function: $timing;
-  animation-iteration-count: $count;
-}
-//  transform
-@mixin transform($transforms) {
-  -moz-transform: $transforms;
-  -o-transform: $transforms;
-  -ms-transform: $transforms;
-  -webkit-transform: $transforms;
-  transform: $transforms;
-}
-// Rotate
-@mixin rotate($deg) {
-  @include transform(rotate(#{$deg}deg));
-}
-// Scale
-@mixin scale($scale) {
-  @include transform(scale($scale));
-}
-// Translate
-@mixin translate($x, $y) {
-  @include transform(translate($x, $y));
-}
-// Transform Origin
-@mixin transformOrigin ($origin) {
-  -webkit-transform-origin: $origin;
-  -moz-transform-origin: $origin;
-  -ms-transform-origin: $origin;
-  transform-origin: $origin;
-}
-// 배경 이미지
-@mixin background($path, $size, $repeat, $posX, $posY, $color) {
-  background-image: url($path);
-  background-size: if($size == null, auto, $size);
-  background-repeat: if($repeat == null, no-repeat, $repeat);
-  background-position-x: if($posX == null, center, $posX);
-  background-position-y: if($posY == null, center, $posY);
-  @if ($color != null) {
-    background-color: $color;
-  }
-}
-// 아이콘
-@mixin maskImage($path, $width, $height, $repeat, $pos, $size, $color) {
-  @if ($width != null) {
-    width: $width;
-  }
-  @if ($height != null) {
-    height: $height;
-  }
-  -webkit-mask-image: url($path);
-  mask-image: url($path);
-  -webkit-mask-repeat: if($repeat == null, no-repeat, $repeat);
-  mask-repeat: if($repeat == null, no-repeat, $repeat);
-  -webkit-mask-position: if($pos == null, center, $pos);
-  mask-position: if($pos == null, center, $pos);
-  @if ($size != null) {
-    -webkit-mask-size: $size;
-    mask-size: $size;
-  }
-  background: $color;
-}
-// 스크롤은 동작하되 스크롤바는 숨김
-@mixin scrollbarHidden {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-    &::-webkit-scrollbar { display: none; /* Chrome, Safari, Opera*/ }
-}
-// 구분선
-@mixin verticalBar($width, $height, $border, $margin) {
-  .vertical-bar {
-    width: $width;
-    min-height: $height;
-    border-right: $border;
-    margin: $margin;
-    vertical-align: middle;
-  }
-}
-
-@mixin horizontalBar($height, $margin, $color) {
-  .horizontal-bar {
-    height: $height;
-    margin: $margin;
-    background-color: $color;
-  }
-}
-
-// Portal에서 사용하고자 하는 디자인 묶음을 mixin으로 정의합니다.
-// header 디자인
-@mixin mainHeader() {
-  padding: 0 0 0 13.75rem; // 220px
-  background-color: $main-header-bg-color;
-  border-bottom: $main-header-border;
-
-  .header-title {
-    height: 10.625rem; // 170px
-    padding: 3.75rem 0; // 60px 0
-
-    .description { margin-left: 0.625rem; } // 10px
-  }
-}
-// 조회 화면 템플릿
-@mixin portalViewTemplate() {
-  .view {
-    // 제목
-    &-title {
-      font-size: $view-title-font-size;
-      font-weight: $view-title-font-weight;
-      color: $view-title-font-color;
-      padding-bottom: 0.625rem; // 10px
-      margin-bottom: 0.625rem; //10px
-      border-bottom: 0.125rem solid $default-gray; // 2px
-    }
-    // 등록일, 등록자
-    &-sub-title {
-      font-size: $view-sub-title-font-size;
-      font-weight: $view-sub-title-font-weight;
-      color: $view-sub-title-font-color;
-      padding: 0 1.25rem; // 0 20px
-    }
-    // 내용
-    &-content {
-      font-size: $view-content-font-size;
-      font-weight: $view-content-font-weight;
-      color: $view-content-font-color;
-      min-height: 13.4375rem; // 215px
-      padding: 0.3125rem 1.25rem; // 5px 20px
-
-      .view-text { margin: 0; }
-    }
-    // 버튼 영역
-    &-btn-content {
-      padding: 0.625rem 0 0 0; // 10px 0 0 0
-    }
-  }
-}
-
-// Default Theme에서 사용하고자 하는 디자인 묶음을 mixin으로 정의합니다.
-// 헤더 공통
-@mixin headerTemplate() {
-  .header-title {
-    padding: 1.563rem 0px 3.875rem 0px; // 25px 0px 62px 0px
-    .description { margin-left: 0.625rem; } // 10px
-  }
-  .header-search {
-    padding: 0.3125rem 0px 1.875rem 0px; // 5px 0px 30px 0px
-    // 건수
-    .txt-num { color: $warm-gray; }
-  }
-}
-// 리스트 공통
-@mixin listTemplate() {
-  .list {
-    a, button { cursor: pointer; }
-    // 테이블
-    &-table {
-      position: relative;
-      display: inline-table;
-      width: 100%;
-    }
-    // thead
-    &-head {
-      tr {
-        height: 2.125rem; // 34px
-        border-bottom: 0.125rem solid $default-gray; // 2px
-
-        th {
-          font-size: 1.125rem; // 18px
-          font-weight: $font-weight-medium;
-          color: $light-black;
-          padding: 0 0.9375rem; // 0 15px
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-        }
-      }
-    }
-    // tbody
-    &-body {
-      position: absolute;
-      width: 100%;
-      height: 33.75rem; // 540px
-      tr {
-        height: 3.375rem; //54px
-        // 마우스 오버시 배경 색상
-        &:hover { background-color: $list-hover-bg-color; }
-        // 선택된 경우
-        &.active {
-          background-color: $list-active-bg-color;
-
-          td { color: $list-active-font-color; }
-        }
-
-        td {
-          font-size: 1rem; // 16px
-          font-weight: $font-weight-regular;
-          color: $dark-gray;
-          padding: 0 0.9375rem; // 0 15px
-          line-height: initial; // 소문자 글자 짤림현상 방지
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-
-          a { color: $dark-gray; }
-        }
-      }
-      // 데이터 없을때
-      .no-data-found-list {
-        background-color: $no-data-found-list-bg;
-        pointer-events: none;
-      }
-    }
-    // tree
-    &-tree {
-      height: 37.88rem; // 606px
-    }
-  }
-}
-// 카드 공통
-@mixin cardTemplate() {
-  .card-list {
-    flex-wrap: wrap;
-    padding-bottom: 0.625rem; // 10px
-
-    .card {
-      position: relative;
-      min-width: 32.0625rem; // 513px
-      min-height: 12.5rem; // 200px
-      margin: 1.25rem 1.25rem 0 0; // 20px 20px 0 0
-      padding: 0;
-      border: $card-border;
-      border-radius: $card-border-radius;
-      overflow: hidden;
-      cursor: pointer;
-      // 마우스 오버시
-      &:hover { box-shadow: $card-hover-box-shadow; }
-
-      .document-column {
-        h3 {
-          width: 28rem; // 448px
-        }
-      }
-    }
-    // 데이터 없을 때
-    .no-data-found {
-      width: 100%;
-      background-color:$no-data-found-bg;
-      pointer-events: none;
-
-      .no-data-icon { content: url("../media/icons/icon_no_data.svg"); }
-      .no-data-text {
-        font-size: 1.125rem;; // 18px
-        font-weight: $font-weight-medium;
-        color: $pressed-gray;
-        margin-left: 2.5rem; // 40px
-      }
-    }
-  }
-}
-// edit, register 공통
-@mixin editTemplate() {
-  .edit {
-    height: 100vh; // edit 화면에서 스크롤이 생기는 영역
-
-    .edit-row {
-      margin: 0.625rem 0 0; // 10px 0 0 0
-
-      // 버튼 목록
-      .btn-list { margin-top: 1.875rem; } // 30px
-    }
-
-    .edit-column {
-      .edit-row { margin: 0.625rem 0 0 0; } // 10px 0 0 0
-    }
-  }
-}
-// view 공통
-@mixin defaultViewTemplate() {
-  .view {
-    height: 100vh; // edit 화면에서 스크롤이 생기는 영역
-    // 각 행
-    .view-row {
-      margin: 0.625rem 0 0 0; // 10px 0 0 0
-      // 버튼 목록
-      .btn-list { margin-top: 1.875rem; } // 30px
-    }
-    // 제목
-    &-title {
-      font-size: $view-title-font-size;
-      font-weight: $view-title-font-weight;
-      color: $view-title-font-color;
-      padding-bottom: 0.625rem; // 10px
-      border-bottom: 0.125rem solid $default-gray; // 2px
-    }
-    // 등록일, 등록자
-    &-sub-title {
-      font-size: $view-sub-title-font-size;
-      font-weight: $view-sub-title-font-weight;
-      color: $view-sub-title-font-color;
-      padding: 0 1.25rem; // 0 20px
-    }
-    // 내용
-    &-content {
-      font-size: $view-content-font-size;
-      font-weight: $view-content-font-weight;
-      color: $view-content-font-color;
-      min-height: 13.4375rem; // 215px
-      padding: 0.3125rem 1.25rem; // 5px 20px
-
-      .view-text { margin: 0; }
-    }
-  }
-}
-
-
+@import "mixins/_mixins.scss";
+@import "mixins/_transition.scss";
+@import "mixins/_layout.scss";
+@import "mixins/_image.scss";
+@import "mixins/_scroll.scss";
+@import "mixins/_divider.scss";
