#10511 [SCSS 개선] template 하위에 mixins 디렉토리 생성(2)
- 각 scss 파일 내에 선언된 @mixin을 추출하여 mixin 디렉토리 내로 이동
- 불필요한 여백, 주석 제거
- 디렉토리 변경에 따른 경로 수정

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -482,12 +482,9 @@ input, button, select, optgroup, textarea {
   cursor: pointer;
 }
 
-/* _fonts.scss 
- *
- * 파일 경로 : template/_fonts.scss
- * @description 폰트 디자인
- * @author wdj
- * @version 1.0
+/*
+ * 폰트
+ * 파일 경로 : _fonts.scss
  */
 @font-face {
   font-family: "Noto Sans KR";
