--- a/src/main/resources/public/src/scss/form/_color-picker.scss
+++ b/src/main/resources/public/src/scss/form/_color-picker.scss
@@ -2,7 +2,7 @@
 
 .color-picker {
   .color-palette {
-    @include color-palette();
+    @include colorPalette();
     & div {
       &:last-child { border: 0.0625rem solid $line-gray; }
     }
