--- a/src/main/resources/public/src/scss/process/_color-picker.scss
+++ b/src/main/resources/public/src/scss/process/_color-picker.scss
@@ -5,7 +5,7 @@
     border: 0.1875rem solid #68717c;
   }
   .color-palette {
-    @include color-palette();
+    @include colorPalette();
     & div {
       &:last-child { border: 0.0625rem solid $line-gray; }
     }
