--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -1,5 +1,8 @@
 @import "mixins/_transition.scss";
+@import "mixins/_position.scss";
 @import "mixins/_layout.scss";
 @import "mixins/_image.scss";
 @import "mixins/_scroll.scss";
 @import "mixins/_divider.scss";
+@import "mixins/_font";
+@import "mixins/_color-picker.scss";
