--- a/src/main/resources/public/src/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/src/scss/template/mixins/_layout.scss
@@ -1,3 +1,37 @@
+// todo: layout 내 mixin 이름 refactoring
+@mixin container {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+@mixin header {
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  height: $layout-header-height;
+  display: flex;
+  align-items: center;
+}
+
+@mixin main {
+  position: fixed;
+  top: $layout-header-height;
+  left: 0;
+  right: $layout-properties-width;
+  bottom: 0;
+  overflow-y: auto;
+}
+
+@mixin properties {
+  position:fixed;
+  top: $layout-header-height;
+  right: 0;
+  bottom: 0;
+  width: $layout-properties-width;
+  overflow-y: auto;
+}
+
 // ITSM에서 사용하고자 하는 디자인 묶음을 mixin으로 정의합니다. (default)
 @mixin headerTemplate() {
   .header-title {
