--- a/src/main/resources/public/src/scss/portal/_fonts.scss
+++ b/src/main/resources/public/src/scss/portal/_fonts.scss
@@ -1,7 +1,9 @@
-@import "../template/_fonts.scss";
-
+/*
+ * 폰트
+ * 파일 경로 : _fonts.scss
+ */
 @each $fname, $weight in $font-face-map {
-    @include font-face("Noto Sans KR", $font-folder-path + "/" + $fname , "opentype", normal, $weight);
+    @include fontFace("Noto Sans KR", $font-folder-path + "/" + $fname , "opentype", normal, $weight);
 }
 
 /*
