#10511 [SCSS 개선] template 하위에 mixins 디렉토리 생성(2)
- 공통적으로 같은 글꼴 속성을 사용하는 각 _fonts.scss에 대해 utilities 내부로 이동, 중첩되는 파일들을 제거했습니다.
- 그 외 미사용 코드 및 오타 수정

--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -1,4 +1,4 @@
-@import "mixins/_transition.scss";
+@import "mixins/_animation";
 @import "mixins/_position.scss";
 @import "mixins/_layout.scss";
 @import "mixins/_image.scss";
