--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -24,7 +24,7 @@
 }
 /////////////////////////////////////////////// 공통 /////////////////////////////////////////////////////
 .itsm-container {
-  @include container;
+  @include containerTemplate;
   width: 100vw;
   height: 100vh;
   overflow: auto;
