--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -10,10 +10,10 @@
 
 // 신청서, 문서함 공통
 .document-container {
-  @include container;
+  @include containerTemplate;
 
   .document-main {
-    @include main;
+    @include fixedContainerTemplate;
     background-color: $layout-main-bg-color;
     @include scrollbarHidden;
 
@@ -72,7 +72,7 @@
   }
 
   .token-properties {
-    @include properties;
+    @include propertiesTemplate;
     background-color: $layout-properties-bg-color;
     border-left: $layout-properties-border;
     padding: 0 4.0625rem; // 65px
