#10511 [SCSS 개선] template 하위에 mixins 디렉토리 생성(2)
- layout 관련 mixin 이름 수정
- [mixins > _layout.scss] 이름 변경에 따라 일부 순서 수정

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -10,10 +10,10 @@
 
 // 신청서, 문서함 공통
 .document-container {
-  @include containerTemplate;
+  @include container;
 
   .document-main {
-    @include fixedContainerTemplate;
+    @include fixedContainer;
     background-color: $layout-main-bg-color;
     @include scrollbarHidden;
 
