--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -24,7 +24,7 @@
 }
 /////////////////////////////////////////////// 공통 /////////////////////////////////////////////////////
 .itsm-container {
-  @include containerTemplate;
+  @include container;
   width: 100vw;
   height: 100vh;
   overflow: auto;
@@ -38,7 +38,7 @@
     height: 100vh;
 
     // 상단 영역
-    @include headerTemplate();
+    @include header();
 
     // 리스트
     @include listTemplate();
